--- a/notebooks/A Walk Through Forpus.ipynb
+++ b/notebooks/A Walk Through Forpus.ipynb
@@ -23,6 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import re\n",
     "try:\n",
     "    from forpus import forpus\n",
     "except ModuleNotFoundError:\n",
@@ -33,15 +35,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Constructing the base class"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,19 +45,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Corpus = forpus.Corpus(source=SOURCE,\n",
-    "                       target=Path('json'),\n",
-    "                       fname_pattern=FNAME_PATTERN)"
+    "## 1. Converting to JSON"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Corpus = forpus.Corpus(source=SOURCE,\n",
+    "                       target='json',\n",
+    "                       fname_pattern=FNAME_PATTERN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1. Calling the method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +79,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2. Checking the output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,44 +99,117 @@
     }
    ],
    "source": [
-    "with open(Path(TARGET, 'corpus.json'), 'r', encoding='utf-8') as file:\n",
+    "with Path('json', 'corpus.json').open('r', encoding='utf-8') as file:\n",
     "    print(json.load(file))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'mary_doc3': {'author': 'mary',\n",
-       "  'text': 'Mary has written the third and last document, but this is also pretty nice.\\n',\n",
-       "  'title': 'doc3'},\n",
-       " 'paul_doc2': {'author': 'paul',\n",
-       "  'text': 'There is also a second document. This one is by Paul. Furthermore, this also contains a lot of tokens.\\n',\n",
-       "  'title': 'doc2'},\n",
-       " 'peter_doc1': {'author': 'peter',\n",
-       "  'text': \"This is the first document. It's written by Peter. And it contains a lot of words.\\n\",\n",
-       "  'title': 'doc1'}}"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "corpus"
+    "## 2. Converting to LDA-C"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Corpus = forpus.Corpus(source=SOURCE,\n",
+    "                       target='ldac',\n",
+    "                       fname_pattern=FNAME_PATTERN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tokenizer(document):\n",
+    "    return re.compile('\\w+').findall(document)\n",
+    "\n",
+    "def drop_stopwords(tokens, stopwords=['the', 'and']):\n",
+    "    return [token for token in tokens if token not in stopwords]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Corpus.to_ldac(tokenizer=tokenizer,\n",
+    "               drop_stopwords=drop_stopwords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "corpus.ldac:\n",
+      "12 0:1 1:1 2:1 3:1 4:1 5:1 6:1 7:1 8:1 9:1 10:1 11:1\n",
+      "16 12:1 8:1 13:1 5:1 14:1 15:1 2:1 16:1 17:1 18:1 19:1 20:1 21:1 22:1 23:1 24:1\n",
+      "16 25:1 8:2 9:2 21:2 26:1 5:1 12:1 27:1 16:1 28:1 29:1 7:1 20:1 22:1 23:1 30:1\n",
+      "\n",
+      "corpus.vocab:\n",
+      "Mary\n",
+      "has\n",
+      "written\n",
+      "third\n",
+      "last\n",
+      "document\n",
+      "but\n",
+      "this\n",
+      "is\n",
+      "also\n",
+      "pretty\n",
+      "nice\n",
+      "This\n",
+      "first\n",
+      "It\n",
+      "s\n",
+      "by\n",
+      "Peter\n",
+      "And\n",
+      "it\n",
+      "contains\n",
+      "a\n",
+      "lot\n",
+      "of\n",
+      "words\n",
+      "There\n",
+      "second\n",
+      "one\n",
+      "Paul\n",
+      "Furthermore\n",
+      "tokens\n",
+      "\n",
+      "corpus.metadata (a simple CSV-file):\n",
+      ",author,title\n",
+      "../corpus/mary_doc3.txt,mary,doc3\n",
+      "../corpus/peter_doc1.txt,peter,doc1\n",
+      "../corpus/paul_doc2.txt,paul,doc2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with Path('ldac', 'corpus.ldac').open('r', encoding='utf-8') as file:\n",
+    "    print('corpus.ldac:\\n{0}\\n'.format(file.read()))\n",
+    "\n",
+    "with Path('ldac', 'corpus.vocab').open('r', encoding='utf-8') as file:\n",
+    "    print('corpus.vocab:\\n{0}\\n'.format(file.read()))\n",
+    "\n",
+    "with Path('ldac', 'corpus.metadata').open('r', encoding='utf-8') as file:\n",
+    "    print('corpus.metadata (a simple CSV-file):\\n{0}'.format(file.read()))"
+   ]
   }
  ],
  "metadata": {
