Update sphinx page

--- a/notebooks/A Walk Through Forpus.ipynb
+++ b/notebooks/A Walk Through Forpus.ipynb
@@ -10,11 +10,9 @@
     "\n",
     "To install Forpus, run the following command in your command-line:\n",
     "\n",
-    "```bash\n",
-    "pip install forpus\n",
     "```\n",
-    "\n",
-    "You will need a directory containing `.txt` files."
+    "pip install forpus\n",
+    "```"
    ]
   },
   {
@@ -57,8 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Corpus = forpus.Corpus(source=SOURCE,\n",
-    "                       target='json',\n",
+    "Corpus = forpus.Corpus(source=SOURCE, # the source directory\n",
+    "                       target='json', # the target directory\n",
     "                       fname_pattern=FNAME_PATTERN)"
    ]
   },
@@ -122,16 +120,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1. Creating preprocessing functions\n",
+    "Due to the structure of the LDA-C corpus format, your corpus has to be tokenized. You can define a simple regex-based tokenizer as below, or use e.g. the library [NLTK](https://www.nltk.org)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def tokenizer(document):\n",
-    "    return re.compile('\\w+').findall(document)\n",
-    "\n",
-    "def drop_stopwords(tokens, stopwords=['the', 'and']):\n",
-    "    return [token for token in tokens if token not in stopwords]"
+    "    return re.compile('\\w+').findall(document)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can pass even more preprocessing functions, which will be applied to the return value of your tokenizer. If you want to remove stopwords, you can use a function as below."
    ]
   },
   {
@@ -140,13 +150,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Corpus.to_ldac(tokenizer=tokenizer,\n",
-    "               drop_stopwords=drop_stopwords)"
+    "def drop_stopwords(tokens, stopwords=['the', 'and']):\n",
+    "    return [token for token in tokens if token not in stopwords]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.3. Calling the method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pass every function as an argument of the method `to_ldac()`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Corpus.to_ldac(tokenizer=tokenizer,\n",
+    "               drop_stopwords=drop_stopwords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2. Checking the output\n",
+    "\n",
+    "Three files have been generated:\n",
+    "\n",
+    "1. `corpus.ldac` contains one document per line as described by [David Blei]().\n",
+    "2. `corpus.vocab` contains one type per line of the vocabulary. The line index is the type index.\n",
+    "3. `corpus.metadata` contains the metadata extracted from filenames. This is a simple CSV-file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +238,7 @@
       "Furthermore\n",
       "tokens\n",
       "\n",
-      "corpus.metadata (a simple CSV-file):\n",
+      "corpus.metadata:\n",
       ",author,title\n",
       "../corpus/mary_doc3.txt,mary,doc3\n",
       "../corpus/peter_doc1.txt,peter,doc1\n",
@@ -208,8 +255,15 @@
     "    print('corpus.vocab:\\n{0}\\n'.format(file.read()))\n",
     "\n",
     "with Path('ldac', 'corpus.metadata').open('r', encoding='utf-8') as file:\n",
-    "    print('corpus.metadata (a simple CSV-file):\\n{0}'.format(file.read()))"
+    "    print('corpus.metadata:\\n{0}'.format(file.read()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
